--- a/index.html
+++ b/index.html
@@ -4,70 +4,120 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lipyc e a Ascensão da Noite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+      body {
+          background-image: url('https://img.freepik.com/free-photo/beautiful-forest-landscape_23-2150724849.jpg?t=st=1720618287~exp=1720621887~hmac=dd809bdc2ba9ee3d096fad0e4fe8daf7888ac6e42b01bd93b20e57cad1018bcf&w=1480');
+          background-size: cover;
+          background-attachment: fixed;
+          color: #f4f4f9;
+      }
+      .bg-dark-transparent {
+          background: rgba(0, 12, 0, 0.7);
+          border-radius: 10px;
+          padding: 20px;
+      }
+      .text-gold {
+          color: #f1c40f;
+      }
+      ul li {
+          list-style-type: none;
+          padding-left: 1.2em;
+          text-indent: -1.2em;
+      }
+      ul li::before {
+          content: "🌟 ";
+          color: #f1c40f;
+          font-weight: bold;
+      }
+      .btn-primary {
+          background-color: #085327;
+          border-color: #085327;
+      }
+      .btn-primary:hover {
+          background-color: #17703c;
+          border-color: #17703c;
+      }
+      footer img {
+          max-height: 50px;
+          margin: 10px;
+      }
+  </style>
 </head>
 <body>
-    <div class="container-fluid" style="background-color: pink;">
-        <div class="row">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Barra de navegação</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
-          aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Início</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Hiperligação</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Exemplo dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Opção 1</a></li>
-                  <li><a class="dropdown-item" href="#">Opção 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Contactos</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Login</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </div>
+     <!-- Container Principal -->
+    <div class="container mt-5">
+      <!-- Cabeçalho -->
+      <header class="text-center bg-dark-transparent mb-4">
+          <h1 class="text-gold">Lipyc e a Ascensão da Noite</h1>
+          <p class="lead">Um jogo de aventura e ação ambientado em Lipycwood, uma floresta mágica ameaçada pela escuridão.</p>
+      </header>
 
-    <div class="row">
-        <div class="card col-3">
-            <img src="https://w0.peakpx.com/wallpaper/62/943/HD-wallpaper-aura-aura-color.jpg" class="card-img-top" alt="aura laranja">
-            <div class="card-body">
-              <h5 class="card-title">Cartão 1</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+      <!-- Introdução -->
+      <section class="bg-dark-transparent mb-4">
+          <h2>História do Jogo</h2>
+          <p>
+              Os jogadores assumem o papel de Lipyc, convocado pelo espírito da floresta para restaurar a luz e a paz na região. Com a ajuda de habilidades únicas, os jogadores exploram a floresta, resolvem desafios, enfrentam inimigos e vão em busca de fragmentos de luz para derrotar o mal que assombra Lipycwood.
+          </p>
+      </section>
+
+      <!-- Objetivos -->
+      <section class="bg-dark-transparent mb-4">
+          <h2>Objetivos</h2>
+          <ul>
+              <li>Restaurar a luz na floresta de Lipycwood.</li>
+              <li>Explorar a floresta mágica e resolver desafios.</li>
+              <li>Derrotar inimigos e enfrentar perigos.</li>
+              <li>Recolher fragmentos de luz para vencer o mal.</li>
+          </ul>
+      </section>
+
+      <!-- Função dos Objetos -->
+      <section class="bg-dark-transparent mb-4">
+          <h2>Função dos Objetos</h2>
+          <p>
+              Os jogadores encontrarão diversos objetos mágicos ao longo do jogo que lhes concederão habilidades especiais e ajudarão a superar os desafios. Alguns exemplos incluem:
+          </p>
+          <ul>
+              <li>Fragmentos de Luz: Restabelecem a luz e aumentam o poder do jogador.</li>
+              <li>Poções de Cura: Recuperam a saúde de Lipyc.</li>
+              <li>Armas Mágicas: Ajudam a derrotar inimigos mais poderosos.</li>
+          </ul>
+      </section>
+
+      <!-- Vídeo Promocional -->
+      <section class="bg-dark-transparent mb-4 text-center">
+          <h2>Vídeo Promocional</h2>
+          <div class="ratio ratio-16x9">
+            <iframe src="https://www.youtube.com/embed/seu_video_promocional" allowfullscreen></iframe>
         </div>
-        <div class="card col-3">
-            <img src="https://w0.peakpx.com/wallpaper/62/943/HD-wallpaper-aura-aura-color.jpg" class="card-img-top" alt="aura laranja">
-            <div class="card-body">
-              <h5 class="card-title">Cartão 2</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+      </section>
+
+      <!-- Jogo Jogável em WebGL -->
+      <section class="bg-dark-transparent mb-4 text-center">
+          <h2>Jogue Agora</h2>
+          <div class="ratio ratio-16x9">
+            <iframe src="seu_jogo_webgl_url" allowfullscreen></iframe>
         </div>
+      </section>
+
+      <!-- Download -->
+      <section class="bg-dark-transparent mb-4 text-center">
+          <h2>Download do Jogo</h2>
+          <a href="seu_arquivo_executavel_url" class="btn btn-primary">Baixar Jogo</a>
+      </section>
+
+  </div>
+
+  <!-- Rodapé -->
+  <footer class="bg-dark text-white text-center py-3">
+    <div class="container">
+        <img src="media/cropped-logo.png" alt="Logo" class="img-fluid mb-2">
+        <p class="mb-1">Desenvolvimento de Jogos</p>
+        <p class="mb-0">Ana Fernandes, Clara Couto, Carolina Neves, Rui Costa, Rodrigo Simões, Ana Figueiredo</p>
     </div>
-    </div>
+</footer>
 </body>
 </html>
