--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <section class="bg-dark-transparent mb-4 text-center">
           <h2>Jogue Agora</h2>
           <div class="ratio ratio-16x9">
-            <iframe src="seu_jogo_webgl_url" allowfullscreen></iframe>
+            <iframe src="WebGL/index.html" allowfullscreen></iframe>
         </div>
       </section>
 
