--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <section class="bg-dark-transparent mb-4 text-center">
           <h2>Vídeo Promocional</h2>
           <div class="ratio ratio-16x9">
-            <iframe src="https://www.youtube.com/embed/cxY8TcEMRME" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cxY8TcEMRME?si=GOa0NfB9NOEwGZ0b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </section>
 
